instructor-lab10/manifests-lab10/shop-api-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab10-canary
  namespace: shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shop
      tier: api-canary
  template:
    metadata:
      labels:
        app: shop
        tier: api-canary
        version: v1
    spec:
      nodeSelector:
        tier: front
      containers:
        - name: api
          image: ghcr.io/worldvit/skillboost-api:v1
          ports:
            - name: http
              containerPort: 5000
          resources:
            requests: {cpu: 50m, memory: 128Mi}
            limits: {cpu: 200m, memory: 256Mi}
          readinessProbe:
            httpGet: {path: /readyz, port: http}
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: lab10-canary
  namespace: shop
spec:
  selector:
    app: shop
    tier: api-canary
  ports:
    - name: http
      port: 5000
      targetPort: 5000
