instructor-lab10/manifests-lab10/canary-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab10-canary-route
  namespace: shop
spec:
  parentRefs:
    - name: shop-gateway
      sectionName: http
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/version
      backendRefs:
        - name: shop-api
          port: 5000
          weight: 8
        - name: lab10-canary
          port: 5000
          weight: 2
