instructor-lab10/manifests-lab10/shop-api-host-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lab10-api-host
  namespace: shop
spec:
  parentRefs:
    - name: shop-gateway
      sectionName: http
  hostnames:
    - "api.skillboost.local"
  rules:
    - backendRefs:
        - name: shop-api
          port: 5000
